--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 # IDEs and editors
 /server/.env
+/server/.env.local
+/server/.env.development
+/server/.env.test
+/server/.env.production
+/server/.env.staging
+/server/node_modules
+
